--- a/Estrutura  básica HTML.html
+++ b/Estrutura  básica HTML.html
@@ -4,8 +4,22 @@
  <meta charset="utf-8">
      <title>João Vitor </title>
 </head>
-<body>
-João Vitor
-</body>
+ <body>
+    <header>
+        <h1>João Vitor</h1>
+    </header>
+    <section>
+     <header>
+      <h2> Posts</h2>
+     </header>
+
+     <article>
+      <header>
+       <h3>Posts #1</h3>
+      </header>
+     </article>
+    </section>
+    <footer></footer>
+  </body>
 </html>
  
