--- a/Estrutura  básica HTML.html
+++ b/Estrutura  básica HTML.html
@@ -6,6 +6,7 @@
 </head>
  <body>
     <header>
+        <img src="Wikipedia1.png" alt="ilustração wikipedia">
         <h1>João Vitor</h1>
     </header>
     <section>
@@ -16,10 +17,31 @@
      <article>
       <header>
        <h3>Posts #1</h3>
+       <img src="Wikipedia2.png" alt="ilustração black wikipedia">
       </header>
+      <p>HTML (abreviação para a expressão inglesa HyperText Markup Language, que significa:
+        "Linguagem de Marcação de Hipertexto")
+        é uma linguagem de marcação utilizada na construção de páginas na Web.
+        Documentos HTML podem ser interpretados por navegadores.
+        A tecnologia é fruto da junção entre os padrões HyTime e SGML.
+        <a href="https://pt.wikipedia.org/wiki/HTML" target="_blank" >wikipedia</a>
+        <a href="mailto: wikipedia@gmail.com"  Gmail ></a></p>
      </article>
     </section>
-    <footer></footer>
+    <footer>
+
+        <ol>
+            <li>
+            <a href="mailto:wikipedia@gmail.com" targe="_blank">Wikipedia</a>
+            </li>
+            
+            <li>
+             <a href="https://pt.wikipedia.org/wiki/HTML" target="_blank">Blog</a>
+
+            </li>
+         
+        </ol>
+    </footer>
   </body>
 </html>
  
