--- a/Estrutura  básica HTML.html
+++ b/Estrutura  básica HTML.html
@@ -32,7 +32,7 @@
 
         <ol>
             <li>
-            <a href="mailto:wikipedia@gmail.com" targe="_blank">Wikipedia</a>
+            <a href="mailto:wikipedia@gmail.com" target="_blank">Wikipedia</a>
             </li>
             
             <li>
